[V8] IndexedDB: IDBTransaction objects leak in Workers https://bugs.webkit.org/show_bug.cgi?id=79308

Source/WebCore:

Use a V8RecursionScope whenever Workers call into script, so that
post-script side-effects can be executed.

Reviewed by Tony Chang.

Test: storage/indexeddb/transaction-abort-workers.html

* bindings/v8/ScheduledAction.cpp:
(WebCore::ScheduledAction::execute):
* bindings/v8/V8WorkerContextErrorHandler.cpp:
(WebCore::V8WorkerContextErrorHandler::callListenerFunction):
* bindings/v8/V8WorkerContextEventListener.cpp:
(WebCore::V8WorkerContextEventListener::callListenerFunction):
* bindings/v8/WorkerContextExecutionProxy.cpp: Replace custom recursion tracking.
(WebCore::WorkerContextExecutionProxy::WorkerContextExecutionProxy):
(WebCore::WorkerContextExecutionProxy::runScript):
* bindings/v8/WorkerContextExecutionProxy.h:
(WorkerContextExecutionProxy):

LayoutTests:

Reviewed by Tony Chang.

* fast/js/resources/js-test-pre.js:
(startWorker): Return Worker object so onerror can be hooked.
* storage/indexeddb/resources/transaction-abort-workers.js: Added.
* storage/indexeddb/transaction-abort-workers-expected.txt: Added.
* storage/indexeddb/transaction-abort-workers.html: Added.


Canonical link: https://commits.webkit.org/96640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108867 268f45cc-cd09-0410-ab3c-d52691b4dbfc